manifests/express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
  namespace: myapp
spec:
  replicas: 1
  nodeSelector:
    role: app
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express
          image: localhost:5000/example-express:latest # Replace with your actual image
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
