manifests/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
  namespace: myapp
spec:
  selector:
    app: express
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
